# gcp-vertex-mlops

./: .gitignore
pipelines/: pyproject.toml
terraform/envs/dev/: .terraform.lock.hcl
