[tool.poetry]
name = "gcp-vertex-mlops"
version = "0.1.0"
description = "A reference implementation of [Vertex Pipelines](https://cloud.google.com/vertex-ai/docs/pipelines/) for creating a production-ready MLOps solution on Google Cloud."
authors = ["Eric Liao <ericliaowei@gmail.com>"]
readme = "README.md"
packages = [{include = "gcp_vertex_mlops"}]

[tool.poetry.dependencies]
python = "3.7.12"
kfp = "1.8.21"
google-cloud-aiplatform = "1.24.1"
google-cloud-pipeline-components = "1.0.42"
Jinja2 = "^3.0.1"
pyyaml = "5.3.1"

[tool.poetry.group.dev.dependencies]
google-cloud-bigquery = "2.30.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
